# pygame_textinput

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-package.yml
pygame_ime_textinput/: textinput.py
pygame_jp_textinput/: text.py  textinput.py
pygame_textinput/: textinput.py
tests/: test_text.py
