[tool.poetry]
name = "pygame_textinput"
version = "0.1.0"
description = ""
authors = ["DYGV <11eisuke88@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

